Added Meta tag for Useful looking good on the Browser

--- a/R1form.html
+++ b/R1form.html
@@ -1,6 +1,11 @@
 <!doctype html>
 <html>
-   <head> <title> Form(1pg) </title> </head>
+   <head> 
+	   <meta charset="UTF-8">
+<meta name="description" content="Free Web tutorials">
+<meta name="keywords" content="registration Form">
+
+	   <title> Form(1pg) </title> </head>
   <body>
     <div>
      <hr/> 
