--- a/R1form.html
+++ b/R1form.html
@@ -1,5 +1,10 @@
 <!doctype html>
 <html>
+	<meta charset="UTF-8">
+  <meta name="description" content="Free Web tutorials">
+  <meta name="keywords" content="HTML, CSS, JavaScript">
+  <meta name="author" content="John Doe">
+  <meta name="viewport" content="width=device-width,
    <head> <title> Form(1pg) </title> </head>
   <body>
     <div>
