Adding background color.

--- a/R1form.html
+++ b/R1form.html
@@ -6,7 +6,7 @@
 <meta name="keywords" content="registration Form">
 
 	   <title> Form(1pg) </title> </head>
-  <body>
+  <body style="background-color: #7f8c8d;">
     <div>
      <hr/> 
 
