--- a/R1form.html
+++ b/R1form.html
@@ -16,8 +16,8 @@
        Password: <input type="password" name="pass" maxlength="15" size="15" placeholder="Password" /><br><br>
  
        Mobileno : <input type="number" name="mob" min="100000000" max="999999999" placeholder="mobnumber"><br><br>
-       Gender: <input type="radio" name="gender" value="M" chacked="chacked" />M 
-	       <input type="radio" name="gender" value="F" chacked="chacked" />F<br><br>
+       Gender: <input type="radio" name="gender" value="M" checked="checked" />M 
+	       <input type="radio" name="gender" value="F" checked="checked" />F<br><br>
        Date Of Birth:<input type="Date" name="date"><br><br>
       City: <select name="city">
           <option value="Vadodara">vadodara</option>
